--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/pro": "1.0.16",
     "@ionic/storage": "2.1.3",
+    "d3": "^4.12.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "moment": "^2.20.1",
+    "ng2-nvd3": "^2.0.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
